# ESP32-H2-LD2450

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE.md  README.md  partitions.csv  partitions_c6.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32h2  sdkconfig.old
.github/: RELEASE.md
.github/workflows/: release-on-tag.yml
components/ld2450/: CMakeLists.txt  ld2450.c  ld2450_cmd.c  ld2450_parser.c  ld2450_zone.c
components/ld2450/include/: ld2450.h  ld2450_cmd.h  ld2450_parser.h  ld2450_zone.h
docs/: coordinator-fallback.md
docs/plans/: 2026-03-22-dual-state-machine-fallback-design.md  2026-03-22-dual-state-machine-fallback.md  2026-03-22-fallback-simplification.md  2026-03-25-safe-boot-config.md
examples/home-assistant/: README.md  plotly-card.yaml  zone-dashboard.yaml
ha/blueprints/: ld2450_fallback_watchdog.yaml
main/: CMakeLists.txt  Kconfig.projbuild  board_config.h  board_led.c  board_led.h  config_api.c  config_api.h  coordinator_fallback.c  coordinator_fallback.h  idf_component.yml  ld2450_cli.c  ld2450_cli.h  ld2450_zb_h2.c  main.cpp  nvs_config.c  nvs_config.h  project_defaults.hpp  sensor_bridge.c  sensor_bridge.h  version.h  web_server.c  web_server.h  wifi_manager.c  zgb_stub.c  zgp_stub.c  zigbee_app.c  zigbee_app.h  zigbee_attr_handler.c  zigbee_attr_handler.h  zigbee_defs.h  zigbee_init.c  zigbee_init.h  zigbee_signal_handlers.c  zigbee_signal_handlers.h
tools/host_test/: test_ld2450_parser.c  test_ld2450_parser_stream.c
web/: app.js  index.html  style.css
z2m/: ld2450_zb_h2.js  ota_index.json
