idf_component_register(
    SRCS
        "main.cpp"
        "ld2450_cli.c"
        "zigbee_app.c"
        "board_led.c"
        "nvs_config.c"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        nvs_flash
    REQUIRES
        ld2450
        espressif__esp-zigbee-lib
        espressif__esp-zboss-lib
        led_strip
    WHOLE_ARCHIVE
)

